# mini-waf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.coverage  Dockerfile.prebuilt  README.md  clippy.toml  codex.md  deny.toml  docker-compose.ci-local.yml  docker-compose.cluster.yml  docker-compose.test.yml  docker-compose.valkey-cluster.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  prompt.md  prx-waf.service
crates/gateway/: CLAUDE.md  Cargo.toml
crates/gateway/benches/: cache_purge_bench.rs  cache_resolver_bench.rs  tier_classifier_bench.rs
crates/gateway/src/: behavior_record.rs  cache.rs  context.rs  http3.rs  lb.rs  lib.rs  protocol.rs  proxy.rs  proxy_waf_response.rs  response_cache_integration.rs  router.rs  ssl.rs  waf_observability_headers.rs
crates/gateway/src/cache/: backend.rs  bootstrap.rs  config.rs  embedded_valkey.rs  mod.rs  moka_store.rs  policy.rs  rule.rs  rule_set.rs  stats.rs  store.rs  tag_index.rs  valkey_store.rs  watcher.rs
crates/gateway/src/ctx_builder/: mod.rs  request_ctx_builder.rs
crates/gateway/src/error_page/: error_page_factory.rs  mod.rs
crates/gateway/src/filters/: mod.rs  request_forwarded_host_filter.rs  request_forwarded_proto_filter.rs  request_hop_by_hop_filter.rs  (+11 more)
crates/gateway/tests/: cache_backend_types.rs  cache_bootstrap_init.rs  cache_hot_reload.rs  cache_integration.rs  cache_stats_lifecycle.rs  cache_store_dashboard.rs  ctx_builder_session.rs  fr018_brute_force_dispatch.rs  lb_strategies.rs  protocol_session.rs  proxy_waf_response_writer.rs  relay_pipeline_handover.rs  response_body_content_scanner_integration.rs  response_json_field_redactor_integration.rs  router_vhost_resolution.rs  ssl_manager_unit.rs  ssl_self_signed_and_challenges.rs  tier_compiled_rule.rs  tier_e2e.rs  tier_hot_reload.rs  waf_observability_headers.rs
crates/prx-waf/: CLAUDE.md  Cargo.toml
crates/prx-waf/src/: main.rs  tls_bootstrap.rs
crates/prx-waf/tests/: victoria_logs_installer_disabled.rs  victoria_logs_installer_extract.rs  victoria_logs_sidecar_disabled.rs
crates/waf-api/: CLAUDE.md  Cargo.toml  build.rs
crates/waf-api/src/: access_lists_api.rs  auth.rs  bot_api.rs  cache_api.rs  challenge_api.rs  config_paths.rs  crowdsec.rs  ddos_api.rs  device_fp_api.rs  error.rs  geo_api.rs  handlers.rs  interop_control.rs  lib.rs  logs.rs  middleware.rs  notifications.rs  panel_api.rs  plugins.rs  relay_api.rs  reputation.rs  reputation_api.rs  risk_api.rs  rule_sources_api.rs  rules_api.rs  security.rs  server.rs  state.rs  static_files.rs  stats.rs  stats_risk_distribution.rs  tier_policies_api.rs  tls.rs  tunnels.rs  websocket.rs
crates/waf-api/tests/: access_lists_api_test.rs  admin_tls_integration.rs  auth_login_logout.rs  challenge_api_test.rs  cluster_handlers_enabled.rs  crowdsec_handlers_enabled.rs  ddos_api_test.rs  device_fp_api_test.rs  error_mapping.rs  geo_api_test.rs  handler_bot_patterns.rs  handler_cache_api.rs  handler_cluster_status.rs  handler_crowdsec.rs  handler_health.rs  handler_hosts_crud.rs  handler_ip_url_lists.rs  handler_misc_resources.rs  handler_notifications.rs  handler_panel_config.rs  handler_plugins_tunnels.rs  handler_rule_sources_api.rs  handler_rules_api.rs  handler_security_event_detail.rs  handler_sensitive_patterns_test.rs  handler_static_files.rs  handler_stats_endpoints.rs  handler_stats_logs.rs  handler_stats_overview_filters.rs  handler_stats_overview_live_counter.rs  interop_control_integration.rs  logs_handlers_proxy.rs  middleware_jwt.rs  notifications_dispatch_unit.rs  notifications_unit.rs  relay_api_test.rs  reputation_api_test.rs  stats_overview_backward_compat.rs  tier_policies_api_test.rs  tunnel_protocol_test.rs  (+1 more)
crates/waf-common/: CLAUDE.md  Cargo.toml
crates/waf-common/src/: config.rs  crypto.rs  lib.rs  panel_config.rs  session_key.rs  tier.rs  tier_match.rs  types.rs  url_validator.rs
crates/waf-common/tests/: config_defaults.rs  config_loader.rs  config_tls_validation.rs  crypto_edge.rs  panel_config_edge.rs  tier.rs  types_decisions.rs  url_validator_edge.rs
crates/waf-engine/: CLAUDE.md  Cargo.toml
crates/waf-engine/benches/: README.md  access_lookup.rs  behavior_eval.rs  ddos_counter.rs  device_fp_capture.rs  device_fp_pipeline.rs  relay_eval.rs  risk_anomaly.rs  rule_eval.rs  sql_injection.rs  tx_velocity_bench.rs
crates/waf-engine/src/: block_page.rs  checker.rs  engine.rs  geoip.rs  geoip_updater.rs  intel_status.rs  lib.rs  rules.rs
crates/waf-engine/tests/: access_hot_reload.rs  access_reload_under_load.rs  access_reload_watcher_extras.rs  audit_emitter_cardinality.rs  audit_emitter_unit.rs  behavior_acceptance.rs  behavior_property.rs  challenge_config.rs  challenge_flow.rs  challenge_pow.rs  challenge_renderer.rs  checker_rule_store.rs  checks_ddos_store_trait.rs  checks_owasp_evasion.rs  checks_owasp_fields.rs  checks_owasp_loaders.rs  checks_owasp_operators.rs  checks_rate_limit_config_facade.rs  checks_request_targets.rs  checks_tx_velocity_reload.rs  community_blocklist_http.rs  community_enroll_http.rs  community_reporter_http.rs  community_reporter_throttle.rs  config_yaml_regression.rs  crowdsec_appsec_client.rs  crowdsec_bouncer_cache.rs  crowdsec_lapi_client_http.rs  crowdsec_pusher_sync_http.rs  custom_rule_file_load.rs  custom_rule_hot_reload.rs  ddos_integration.rs  ddos_loom.rs  ddos_proptest.proptest-regressions  ddos_proptest.rs  ddos_soak.rs  device_fp_capture_fixtures.rs  device_fp_identity_lru.rs  device_fp_pipeline_e2e.rs  device_fp_process_pipeline.rs  (+44 more)
crates/waf-storage/: CLAUDE.md  Cargo.toml
crates/waf-storage/src/: db.rs  error.rs  lib.rs  models.rs  repo.rs
crates/waf-storage/tests/: db_migrate_and_broadcast.rs  repo_admin_users.rs  repo_attack_logs.rs  repo_category_function.rs  repo_certificates.rs  repo_custom_rules.rs  repo_endpoint_heatmap.rs  repo_hosts.rs  repo_ip_lists.rs  repo_notifications.rs  repo_plugins_tunnels_crowdsec.rs  repo_reputation_test.rs  repo_security_events.rs  repo_sensitive_patterns_test.rs  repo_stats_overview_filters.rs  repo_url_lists.rs
(+1178 files in other folders)
