[workspace]
members = [
    "crates/prx-waf",
    "crates/gateway",
    "crates/waf-engine",
    "crates/waf-storage",
    "crates/waf-api",
    "crates/waf-common",
    "crates/waf-cluster",
]
# vendor/pingora is a separate workspace (vendored fork). Excluded so its own
# workspace inheritance (`*.workspace = true`) resolves against pingora's root,
# not ours.
exclude = ["vendor/pingora"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2024"
authors = ["g1e2x87"]
license = "MIT OR Apache-2.0"
description = "Pingora-based web application firewall with YAML rules engine"
repository = "https://github.com/openprx/prx-waf"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy — vendored fork at vendor/pingora (Apache-2.0).
# Crates.io versions kept; [patch.crates-io] at workspace root redirects to
# vendor/pingora so its own workspace inheritance still resolves. The fork is
# patched with ClientHello/H2 frame inspector hooks for FR-010 device fingerprinting.
pingora = { version = "0.8", features = ["lb"] }
pingora-core = { version = "0.8", features = ["rustls"] }
pingora-proxy = { version = "0.8", features = ["rustls"] }
pingora-http = { version = "0.8" }
pingora-timeout = { version = "0.8" }

# API framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Database - PostgreSQL (default-features = false to exclude mysql/sqlite which pull in rsa RUSTSEC-2023-0071)
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono", "uuid", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
regex = "1"
ipnet = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
bytes = "1"
http = "1"

# Phase 3 additions
rhai = { version = "1", features = ["sync"] }
aho-corasick = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
instant-acme = "0.7"
rcgen = "0.13"
base64 = "0.22"

# Phase 4 additions
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
aes-gcm = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "builder"] }
rust-embed = "8"
mime_guess = "2"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
rand = "0.8"
totp-lite = "2"
data-encoding = "2"

# Phase 5 additions
wasmtime = { version = "43.0.0", default-features = false, features = ["cranelift", "runtime", "component-model", "std", "anyhow"] }
moka = { version = "0.12", features = ["future", "sync"] }
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", features = ["ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls-pki-types = { version = "1", features = ["std"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
multipart = { version = "0.18", default-features = false, features = ["server"] }
axum-extra = { version = "0.12", features = ["multipart"] }

# Phase 7 additions
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# URL validation
url = "2"

# Cluster additions
lz4_flex = "0.11"
hmac = "0.12"
subtle = "2"
time = { version = "0.3", default-features = false, features = ["std"] }
parking_lot = "0.12"

# Signature verification
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
zstd = "0.13"

# Valkey/Redis async client (used by gateway `valkey` feature). Cargo forbids
# `optional = true` on workspace dependencies; the optional bit is added in the
# crate that owns the feature flag (`crates/gateway/Cargo.toml` →
# `fred = { workspace = true, optional = true }`).
fred = { version = "9", features = ["i-keys", "i-sets", "i-server", "i-cluster", "rustls-native-certs", "unix-sockets"] }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
# Allow loom cfg for concurrency tests (waf-engine/tests/ddos_loom.rs)
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
undocumented_unsafe_blocks = "deny"

inefficient_to_string = "deny"
large_futures = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
too_many_lines = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Redirect crates.io pingora* lookups to the vendored fork (FR-010 hook patches).
[patch.crates-io]
pingora = { path = "vendor/pingora/pingora" }
pingora-core = { path = "vendor/pingora/pingora-core" }
pingora-proxy = { path = "vendor/pingora/pingora-proxy" }
pingora-http = { path = "vendor/pingora/pingora-http" }
pingora-timeout = { path = "vendor/pingora/pingora-timeout" }
pingora-rustls = { path = "vendor/pingora/pingora-rustls" }
