[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-engine = { path = "../waf-engine" }
waf-storage = { path = "../waf-storage" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-http = { workspace = true }
instant-acme = { workspace = true }
rcgen = { workspace = true }
moka = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
rustls-pki-types = { workspace = true }
parking_lot = { workspace = true }
ipnet = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
arc-swap = "1"
notify = { workspace = true }
toml = { workspace = true }
# FR-033 response body content scanner
aho-corasick = { workspace = true }
# FR-033 gzip decompression. Pinned to 1.x (red-team #11) — tracks workspace ecosystem.
flate2 = "1"
regex-syntax = "0.8"
twox-hash = { version = "2", default-features = false, features = ["xxhash64"] }

[dev-dependencies]
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
toml = { workspace = true }
static_assertions = "1.1"

[[bench]]
name = "tier_classifier_bench"
harness = false

[lints]
workspace = true
