[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-engine = { path = "../waf-engine" }
waf-storage = { path = "../waf-storage" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-http = { workspace = true }
instant-acme = { workspace = true }
rcgen = { workspace = true }
moka = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
rustls-pki-types = { workspace = true }
parking_lot = { workspace = true }
ipnet = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
arc-swap = "1"
notify = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }

# Valkey/Redis async client — only compiled when the `valkey` feature is enabled.
# Feature set + version are pinned in the workspace root Cargo.toml; we only
# inherit + re-declare optionality so the `dep:fred` feature gate below works.
fred = { workspace = true, optional = true }

[features]
# Enable Valkey/Redis cache backends (ValkeyStore + EmbeddedValkey supervisor).
# Disabled by default so CI pure-memory builds stay lean.
# Enable in production Dockerfiles with: --features valkey
valkey = ["dep:fred"]

[dev-dependencies]
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
toml = { workspace = true }

[[bench]]
name = "tier_classifier_bench"
harness = false

[[bench]]
name = "cache_resolver_bench"
harness = false

[[bench]]
name = "cache_purge_bench"
harness = false

[lints]
workspace = true
