[package]
name = "prx-waf"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prx-waf"
path = "src/main.rs"

[dependencies]
waf-common = { path = "../waf-common" }
waf-storage = { path = "../waf-storage" }
waf-engine = { path = "../waf-engine" }
waf-api = { path = "../waf-api" }
waf-cluster = { path = "../waf-cluster" }
gateway = { path = "../gateway" }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
arc-swap = "1"

pingora-core = { workspace = true }
pingora-proxy = { workspace = true }

# Direct rustls dep so we can call `install_default()` at the top of `main()`.
# Without this the process panics later when a worker thread first uses TLS,
# because both `ring` and `aws-lc-rs` are linked via transitive deps and
# rustls 0.23+ refuses to auto-pick a CryptoProvider in that case.
rustls = { workspace = true }

[lints]
workspace = true
