[package]
name = "waf-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-storage = { path = "../waf-storage" }
waf-engine = { path = "../waf-engine" }
gateway = { path = "../gateway" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
