[package]
name = "waf-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
