[package]
name = "waf-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
