[package]
name = "waf-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

# cargo-machete false-positive: `md-5` is imported as `md5` in
# device_fp/fingerprint/ja3.rs (crate name vs lib name mismatch).
[package.metadata.cargo-machete]
ignored = ["md-5"]

[dependencies]
waf-common = { path = "../waf-common" }
waf-storage = { path = "../waf-storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rhai = { workspace = true }
aho-corasick = { workspace = true }
serde_yaml = { workspace = true }
wasmtime = { workspace = true }
reqwest = { workspace = true, features = ["stream", "gzip"] }
futures-util = "0.3"
flate2 = "1"
notify = { workspace = true }
ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
arc-swap = "1"
parking_lot = { workspace = true }
libinjectionrs = "0.1"
ed25519-dalek = { workspace = true }
zstd = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
ahash = "0.8"
globset = "0.4"
ip_network_table = "0.2"
ip_network = "0.4"
maxminddb = "0.27"
http = { workspace = true }
# FR-010 device fingerprinting — depends on inspector traits from vendored pingora fork.
pingora-core = { workspace = true }
# FR-010 phase-04 fingerprint hashers.
md-5 = { workspace = true }
sha2 = { workspace = true }
# FR-010 phase-08 — Redis identity store backend; gated by `redis-store` feature.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp", "script"], optional = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3"
wiremock = "0.6"
proptest = "1"
reqwest = { workspace = true, features = ["stream", "gzip"] }

[[bench]]
name = "sql_injection"
harness = false

[[bench]]
name = "rule_eval"
harness = false

[[bench]]
name = "access_lookup"
harness = false

[[bench]]
name = "relay_eval"
harness = false

[[bench]]
name = "device_fp_capture"
harness = false

[[bench]]
name = "device_fp_pipeline"
harness = false

[features]
default = []
# FR-010 device fingerprinting — Redis-backed identity store (phase-08).
redis-store = ["dep:redis"]
# FR-004 rate-limiting — exposes the shared store conformance suite to integration
# tests / external backends. Implicitly enabled under `cfg(test)`.
test-conformance = []

[lints]
workspace = true
