[package]
name = "waf-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
